Issue test working for simple case

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "typescript": "^3.9.10"
     },
     "dependencies": {
+        "@greymass/eosio": "^0.6.4",
         "did-jwt-vc": "file:../did-jwt-vc",
         "eosio-did": "^0.1.2"
     }
