--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "size": "size-limit",
         "analyze": "size-limit --why"
     },
-    "peerDependencies": {},
     "husky": {
         "hooks": {
             "pre-commit": "tsdx lint"
@@ -47,6 +46,7 @@
     "devDependencies": {
         "@size-limit/preset-small-lib": "^7.0.8",
         "@types/jest": "^25.2.3",
+        "@types/node-fetch": "^2.6.2",
         "ethr-did": "^2.3.0",
         "husky": "^8.0.1",
         "size-limit": "^7.0.8",
@@ -56,8 +56,11 @@
     },
     "dependencies": {
         "@greymass/eosio": "^0.6.4",
+
+        "antelope-did": "file:../antelope-did",
+        "did-jwt": "file:../did-jwt",
         "did-jwt-vc": "file:../did-jwt-vc",
         "eosio-did": "^0.1.2",
-        "did-jwt": "file:../did-jwt"
+        "node-fetch": "^2.6.7"
     }
 }
