--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
         "singleQuote": true,
         "trailingComma": "es5"
     },
-    "name": "eosio-ssi-toolkit",
+    "name": "antelope-ssi-toolkit",
     "author": "Jack Tanner",
-    "module": "dist/eosio-ssi-toolkit.esm.js",
+    "module": "dist/antelope-ssi-toolkit.esm.js",
     "size-limit": [
         {
-            "path": "dist/eosio-ssi-toolkit.cjs.production.min.js",
+            "path": "dist/antelope-ssi-toolkit.cjs.production.min.js",
             "limit": "10 KB"
         },
         {
-            "path": "dist/eosio-ssi-toolkit.esm.js",
+            "path": "dist/antelope-ssi-toolkit.esm.js",
             "limit": "10 KB"
         }
     ],
