--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "antelope-ssi-toolkit",
+    "name": "@tonomy/antelope-ssi-toolkit",
     "author": "Jack Tanner",
     "version": "1.0.0",
     "license": "MIT",
