--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
   "include": [
     "src",
-    "types"
+    "types",
+    "/test/util", "test/util/mockResolver.ts",
   ],
   "compilerOptions": {
     "target": "es5",
